1999-02-03   Hidekazu Nakamura <u90121@uis-inf.co.jp>

	* lisp/read-passwd.el (read-pw-set-mail-source-passwd-cache): To
	work with APOP authentication scheme.

1999-02-02  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus-ofsetup.el (gnus-setup-for-offline): To work with
	external movemail program.

	* lisp/gnus.el (gnus-variable-list): Add
	mail-source-password-cache to save password information.

1999-02-01  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus.el (gnus-version-number): Update to 6.10.057.

	* Sync up with Pterodactyl Gnus v0.75.

1999-02-01  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus-offline.el (gnus-offline-gnus-get-new-news): Undo my
	change.

1999-02-01  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus-offline.el (gnus-offline-define-menu-on-miee): Close
	parentheses.
	(gnus-offline-define-menu-on-agent): Ditto.

1999-02-01  Katsumi Yamaoka   <yamaoka@jpl.org>

	* README.ichikawa: Fix about the last version of T-gnus based on
	Gnus 5.6.

1999-02-01  Akihiro Arisawa   <ari@mei9.advantest.co.jp>

	* lisp/nndoc.el (nndoc-mime-digest-type-p): Add the element of
	`header-begin' to type-alist for mime-digest.

1999-02-01  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* README-offline.ja: Add description written by YOSHIZAWA Masahiro
	<manbou@ceres.dti.ne.jp>

1999-02-01  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>
            Tsukamoto Tetsuo  <czkmt@remus.dti.ne.jp>

	* lisp/gnus-offline.el (gnus-offline-gnus-get-new-news): Modify for
	pGnus with mail-source.el.

	* lisp/gnus-offline.el: Use (running-pterodactyl-gnus-0_73-or-later)
        to check pGnus 0.73 or later instead of (locate-library "mail-source")

1999-02-01  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/nndoc.el (nndoc-mime-parts-type-p): Strip leading white
	space from the matching pattern.

1999-02-01  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus-sum.el (gnus-nov-parse-extra): Abolished.